--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Spam protection & redirect -->
     <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="https://sites.google.com/charlestonintegratedcounseling.com/charlestonintegratedcounseling/thank-you">
+    <input type="hidden" name="_next" value="https://github.com/rkreutner/contact-form/blob/main/thank-you.html">
 
     <button type="submit" style="padding:12px; background-color:#007BFF; color:white; border:none; border-radius:5px; font-size:16px; cursor:pointer;">
       Submit
